[tool.poetry]
name = "puepy"
version = "0.3.4"
description = "Frontend Framework for PyScript"
authors = ["Ken Kinder <ken+github@kkinder.com>"]
readme = "README.md"
homepage = "https://puepy.dev/"
repository = "https://github.com/kkinder/puepy"
documentation = "https://docs.puepy.dev/"
license = "Apache-2.0"
keywords = ["pyscript", "webassembly", "frontend", "framework", "reactive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Environment :: WebAssembly",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]


[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tools.poetry.urls]
issues = "https://github.com/kkinder/puepy/issues"
