[project]
name = "puepy"
version = "0.4.6"
description = "Frontend Framework for PyScript"
authors = [{name="Ken Kinder", email="ken+github@kkinder.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
license = { text = "Apache-2.0" }
keywords = ["pyscript", "webassembly", "frontend", "framework", "reactive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Environment :: WebAssembly",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://puepy.dev/"
Documentation = "https://docs.puepy.dev/"
Repository = "https://github.com/kkinder/puepy"
Issues = "https://github.com/kkinder/puepy/issues/"
Changelog = "https://github.com/kkinder/puepy/releases"

[dependency-groups]
dev = [
    "pytest-playwright>=0.7.0",
    "pytest>=8.3.4",
]
